# ArtemisChat

./: .gitignore  HANDOFF.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: prompt-template.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  deepseek.rs  history.rs  lib.rs  main.rs  prompt.rs  settings.rs  stats.rs  vault.rs
src/windows/: ChatWindow.tsx  FabWindow.tsx
vault-template/: campos-padrao.md  estilo.md  evitar.md  exemplos-aprovados.md
